--- a/practice/taylor/webpack/package.json
+++ b/practice/taylor/webpack/package.json
@@ -1,15 +1,24 @@
 {
-"name": "taylor",
-"version": "1.0.0",
-"description": "sample",
-"main": "index.js",
-"scripts": {
-"start": "webpack-dev-server --host 127.0.0.1 --port 8081 --hot --inline"
-},
-"author": "taylor",
-"license": "",
-"devDependencies": {
-"html-webpack-plugin": "^2.24.1",
-"webpack-dev-server": "^1.16.2"
-}
+  "name": "taylor",
+  "version": "1.0.0",
+  "description": "sample",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack-dev-server --hot --inline"
+  },
+  "author": "taylor",
+  "license": "",
+  "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-preset-es2015": "^6.18.0",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.24.1",
+    "jquery": "^3.1.1",
+    "moment": "^2.17.1",
+    "node-sass": "^4.0.0",
+    "sass-loader": "^4.0.2",
+    "url-loader": "^0.5.7",
+    "webpack-dev-server": "^1.16.2"
+  }
 }
