--- a/practice/Marlon/webpack/package.json
+++ b/practice/Marlon/webpack/package.json
@@ -12,9 +12,13 @@
   "author": "Marlon",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.26.1",
     "html-webpack-plugin": "^2.24.1",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.13.2"
   }
 }
